Setup code for Role Based Authorization API

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Secret": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
