Created template we are going to use in our API project using JWTs

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -2,6 +2,9 @@
   "AppSettings": {
     "Secret": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
   },
+  "ConnectionStrings": {
+    "WebApiDatabase": "Data Source=Database\\test.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
