--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.8.1",
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
