--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@tanstack/react-query": "^4.24.4",
+    "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
+    "react-toastify": "^9.1.1",
     "storybook-addon-react-router-v6": "^0.2.1"
   },
   "devDependencies": {
@@ -28,6 +31,7 @@
     "@storybook/builder-vite": "^0.3.0",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@types/axios": "^0.14.0",
     "@types/bootstrap": "^5.2.6",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
