--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@tanstack/react-query": "^4.24.4",
+    "@types/jsonwebtoken": "^9.0.1",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
+    "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.8.1",
