--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,11 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@tanstack/react-query": "^4.24.4",
-    "@types/jsonwebtoken": "^9.0.1",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
-    "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.1.8",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.1",
