--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap-typeahead": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.1.8",
     "react-router": "^6.8.1",
