--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.1",
+    "reactflow": "^11.7.0",
     "storybook-addon-react-router-v6": "^0.2.1"
   },
   "devDependencies": {
