--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^4.24.4",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
+    "elkjs": "^0.8.2",
     "react": "^18.2.0",
     "react-bootstrap-typeahead": "^6.1.1",
     "react-dom": "^18.2.0",
